--- a/templates/home.html
+++ b/templates/home.html
@@ -1,10 +1,5 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block head %}
-    <title>ACM</title>
-    <link rel="stylesheet" href="{% static 'landing.css'%}">
-    
-{% endblock head %}
-{% block body %}
+{% extends 'base.html' %} {% load static %} {% block title%} AURA25 {% endblock
+title%} {% block head %}
+<link rel="stylesheet" href="{% static 'landing.css'%}" />
 
-{% endblock body %}
+{% endblock head %} {% block body %} {% endblock body %}
