--- a/templates/base.html
+++ b/templates/base.html
@@ -1,69 +1,102 @@
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="{% static 'base.css' %}">
-    <script src="{% static 'jquery-3.7.1.min.js' %}"></script>
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css"/>
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <script src="https://kit.fontawesome.com/f6f041e551.js" crossorigin="anonymous"></script>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&family=Rubik+Doodle+Triangles&family=Rubik+Lines&display=swap" rel="stylesheet">
-    <link rel="shortcut icon" href="{% static 'Images/logo.png' %}" type="image/x-icon">
-    {% block head %} 
-    {% endblock head %}
-</head>
-<body>
-  <div class="container">
-    <header class="site-header">
-        <div class="header__content--flow">
-            <section class="header-content--left">
-                <a href="#" class="brand-logo">
-                  <img src="{% static 'Images/fdgvflogo.png' %}" height="50px" class="animate__animated  animate__jello" />
-                    <span class="logo-text animate__animated animate__bounceInDown">GIT</span>
-                </a>
-                <button class="nav-toggle">
-                    <span class="toggle--icon"></span>
-                </button>
-            </section>
-            <section class="header-content--right">
-                <nav class="header-nav" role="navigation">
-                    <ul class="nav__list" aria-expanded="false">
-                        <li class="list-item">
-                            <a class="nav__link" href="{% url 'home' %}">Home</a>
-                        </li>
-                        <li class="list-item">
-                            <a class="nav__link" href="{% url 'participant' %}">participant</a>
-                        </li>
-                        <li class="list-item">
-                            <a class="nav__link" href="{% url 'Host' %}">Host</a>
-                        </li>
-                        
-                        <li class="list-item">
-                            <a class="nav__link" href="{% url 'about' %}">about</a>
-                        </li>
-                      
-                    </ul>
-                </nav>
-            </section>
-        </div>
-    </header>
-    
-</div>
-<div class="outer-container">
-<div class="head-space"></div>
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <title>{% block title %} {% endblock title %} | Project</title>
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="{% static 'base.css' %}" />
+    {% block head %} {% endblock head %}
+  </head>
 
-    {% block body %}
-    {% endblock body %}
-</div>
-<div class="footer">
-  copyright@ KLS GIT
-</div>
-    <script type="text/javascript" src="{% static 'base.js' %}"></script>
-    {% block script %}
-    {% endblock script %}
-</body>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-dark bg-dark w-100">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img
+            src="/docs/5.3/assets/brand/bootstrap-logo.svg"
+            alt="Logo"
+            width="30"
+            height="24"
+          />
+          AURA25
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarSupportedContent"
+          aria-controls="navbarSupportedContent"
+          aria-expanded="false"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="/">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/host">Hosts</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="/participant">Participants</a>
+            </li>
+            {% comment %}
+            <li class="nav-item">
+              <a class="nav-link disabled" aria-disabled="true">Disabled</a>
+            </li>
+            {% endcomment %}
+          </ul>
+          <form class="d-flex" role="search">
+            <input
+              class="form-control me-2"
+              type="search"
+              placeholder="Search"
+              aria-label="Search"
+            />
+            <button class="btn btn-outline-success" type="submit">
+              Search
+            </button>
+          </form>
+        </div>
+      </div>
+    </nav>
+    {% if messages %} {% for message in messages %}
+    <div
+      class="alert alert-{{ message.tags }} alert-dismissible fade show my-0"
+      role="alert"
+    >
+      <strong>{{ message }}</strong>
+      <button
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="alert"
+        aria-label="Close"
+      ></button>
+    </div>
+    {% endfor %} {% endif %}
+    <div class="outer-container">
+      <div class="head-space"></div>
+      {% block body %} {% endblock body %}
+    </div>
+
+    <footer class="footer bg-dark text-light text-center py-2">
+      &copy; 2024 KLS GIT
+    </footer>
+
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    {% block script %} {% endblock script %}
+  </body>
 </html>
