--- a/templates/participant.html
+++ b/templates/participant.html
@@ -1,12 +1,7 @@
-{% extends 'base.html' %}
-{% load static %}
-{% block head %}
-    <title>ACM</title>
-    <link rel="stylesheet" href="{% static 'participant.css'%}">
-    
-{% endblock head %}
-{% block body %}
-<p>
-    participant
-</p>
+{% extends 'base.html' %} {% load static %} {% block title%} Participant {%
+endblock title%} {% block head %}
+<link rel="stylesheet" href="{% static 'participant.css'%}" />
+
+{% endblock head %} {% block body %}
+<p>participant</p>
 {% endblock body %}
