--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %} {% load static %} {% block title%} AURA25 {% endblock
-title%} {% block head %}
+{% extends 'base.html' %} {% load static %} {% block title%} AURA25 {% endblock title%} {% block head %}
 <link rel="stylesheet" href="{% static 'landing.css'%}" />
 
 {% endblock head %} {% block body %} {% endblock body %}
