--- a/templates/login.html
+++ b/templates/login.html
@@ -1,2 +1,4 @@
-{% extends "base.html" %} {% load static %} {% block title %} {% endblock title
-%} {% block body %} {% endblock body %}
+{% extends "base.html" %} {% load static %}
+{% block title %}
+{% endblock title %}
+{% block body %} {% endblock body %}
