--- a/templates/participant.html
+++ b/templates/participant.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %} {% load static %} {% block title%} Participant {%
-endblock title%} {% block head %}
+{% extends 'base.html' %} {% load static %} {% block title%} Participant {%endblock title%} {% block head %}
 <link rel="stylesheet" href="{% static 'participant.css'%}" />
 
 {% endblock head %} {% block body %}
