--- a/templates/scan.html
+++ b/templates/scan.html
@@ -1,5 +1,4 @@
-{% extends "base.html" %} {% load static %} {% block title %} QR Code Scanner {%
-endblock title %} {% block body %}
+{% extends "base.html" %} {% load static %} {% block title %} QR Code Scanner {% endblock title %} {% block body %}
 <h1>QR Code Scanner</h1>
 <button id="startButton">Start Camera</button>
 <video id="preview" width="400" height="300" style="display: none"></video>
