--- a/templates/about.html
+++ b/templates/about.html
@@ -1,5 +1,5 @@
-{% extends 'base.html' %} {% load static %} {% block title%} About {% endblock
-title%} {% block head %}
+{% extends 'base.html' %} {% load static %}
+{% block title%} About {% endblock title%} {% block head %}
 <link rel="stylesheet" href="{% static 'about.css'%}" />
 {% endblock head %} {% block body %}
 <p>about page</p>
