--- a/templates/host.html
+++ b/templates/host.html
@@ -1,5 +1,4 @@
-{% extends 'base.html' %} {% load static %} {% block title%} Host {% endblock
-title%} {% block head %}
+{% extends 'base.html' %} {% load static %} {% block title%} Host {% endblock title%} {% block head %}
 <link rel="stylesheet" href="{% static 'Host.css'%}" />
 
 {% endblock head %} {% block body %}
